--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,9 @@ form label {
     text-align: center;
 }
 
-#day, #month, #year {
+#dropdownConntainer {
     text-align: center;
+    margin-bottom: 1rem;
 }
 
 #submit {
