--- a/css/style.css
+++ b/css/style.css
@@ -104,10 +104,26 @@ form label {
 }
 
 .holidayPhoto {
-  float: right;
   max-width: 50%;
   max-height: 400px;
 }
+
+.holidayPhotoBlock {
+    text-align: left;
+}
+
+@media only screen and (min-width: 992px) {
+    .text {
+        float: left;
+    }
+
+    .holidayPhotoBlock {
+        text-align: right;
+    }
+}
+
+
+
 
 footer {
   background: #7cf;
